--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,5 @@
 title: Nebulous Insights
-theme: jekyll-theme-slate
+# theme: jekyll-theme-slate
 # theme: jekyll-theme-merlot
 # theme: jekyll-theme-dinky
+theme: Moonwalk
