--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,3 @@
 title: Nebulous Insights
 # theme: jekyll-theme-slate
-# theme: jekyll-theme-merlot
-# theme: jekyll-theme-dinky
-theme: Moonwalk
+theme: jekyll-theme-Midnight
